assets/css/style.css
/* ... */
.partner-slider .control-c.a-left, .meet-mind-slider .control-c.a-left, .fresh-update-slider .control-c.a-left{
    left: 38%;
}
.partner-slider .control-c.slick-arrow:hover, .meet-mind-slider .control-c.slick-arrow:hover, .fresh-update-slider .control-c.slick-arrow:hover{
    background: #000;
}
.partner-slider .control-c.slick-arrow img, .meet-mind-slider .control-c.slick-arrow img, .fresh-update-slider .control-c.slick-arrow img{
    margin: 0 auto;
    width: 16px;
}
.partner-slider .control-c.slick-arrow:hover img, .meet-mind-slider .control-c.slick-arrow:hover img, .fresh-update-slider .control-c.slick-arrow:hover img{
    filter: contrast(0);
}
.getYown-img video,
.getYown-img img {
    width: 100%;
    display: block !important;
}
.pT-40{
    padding-top: 40px;
}
section.getyour-sec {
    background: #03c5fd;
    padding: 90px 0;
    position: relative;
    min-height: 50vw;
    display: flex;
    align-content: center;
}

section.getyour-sec .getyour-sec-video {
    position: absolute;
    top: 0;
    left: auto;
    right: 0;
    height: 100%;
    max-width: 50%;
}

@media screen and (max-width: 767px) {
    section.getyour-sec {
        display: block;
    }
    section.getyour-sec .getyour-sec-video {
        max-width: 100%;
        position: relative;
        height: auto;
    }
}

section.getyour-sec .secTitle.TextLeft {
    /*padding-bottom: 70px;*/
}
/* .colItem {
    padding: 15px;
} */
.colItem .col-item-img {
    background: #fff;
    border-radius: 16px;
    padding: 20px;
    text-align: center;
    min-height: 350px;
    display: flex;
    align-items: center;
    justify-content: center;
}
.colItem .col-item-img img {
    width: 100%;
    max-width: 165px;
}
.col-item-text h4 {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 50px;
    font-style: normal;
    font-weight: 400;
    line-height: 90%;
    letter-spacing: -1px;
    /* text-transform: uppercase; */
    margin: 0;
}
.col-item-text p {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 140%;
    margin: 0;
    padding: 18px 0;
}
.col-item-text a svg {
    margin-left: 11px;
}

.col-item-text a {
    border-radius: 100px;
    background: #FFF;
    padding: 13px 24px;
    text-decoration: none;
    display: inline-flex;
    align-items: center;
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 18px;
}
.col-item-text .pinkBtn{
    background: #fff;
    color: #231F20;
    position: relative;
}
.col-item-text .pinkBtn:hover {
    background: #ff007a;
    color: #fff;

}
.col-item-text .pinkBtn img.cursor-icon {
    position: absolute;
    bottom: -60px;
    right: 0;
    width: 36px;
}
.col-item-text .pinkBtn svg path {
    stroke: #fff;
}
section.the-key-start {
    padding: 90px 0;
}
section.the-key-start .secTitle.TextLeft h2 span .keyStattes-images {
    width: 100%;
    position: absolute;
    top: -200px;
    right: -320px;
    width: 320px;
}
section.the-key-start .secTitle.TextLeft h2 span {
    display: inline-block;
    position: relative;
}
section.the-key-start span.yownGroup-img2 {
    position: absolute !important;
    right: 0;
    bottom: 0;
    width: 250px;
}
section.the-key-start span.yownGroup-img2 img {
    width: 100% !important;
}
section.the-key-start .secTitle.TextLeft h2 span.yownGroup-img2 img {
    right: -150px;
    width: 270px;
    top: -230px;
}

section.the-key-start .secTitle.TextLeft h2 span .keyStattes-images img.card-1-img {
    position: absolute;
    left: 30px;
    width: 100%;
    max-width: 230px;
    z-index: 2;
    transform: rotate(8deg);
    transition: all 0.3s ease-in-out;
}
section.the-key-start .secTitle.TextLeft h2 span .keyStattes-images img.card-2-img {
    position: absolute;
    right: -30px;
    width: 100%;
    max-width: 230px;
    transition: all 0.3s ease-in-out;
    transform: rotate(-8deg);
}

section.the-key-start #targetDiv.active img.card-1-img {
    transform: rotate(0deg);
    transition: all 0.6s ease-in-out;
    animation-delay: 4s;
    left: 0px;
}
section.the-key-start #targetDiv.active img.card-2-img {
    transform: rotate(0deg);
    transition: all 0.6s ease-in-out;
    animation-delay: 4s;
    right: -60px;
}
.boxStyle {
    border-radius: 32px;
    padding: 40px;
    margin: 16px 0;
}
.boxYellow {
    background: #b2ff92;
}
.boxLightPink {
    background: #cdf4fe;
}
.boxBlue {
    background: #03c5fd;
}
.boxLightGreen {
    background: #94b8ff;
}
.boxGrey{
    background: #F8F8F8;
}
section.the-key-start .secTitle h2 {
    font-size: 165px;
    text-align: left;
    position: relative;
}
.boxStyle h3 {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 100px;
    font-style: normal;
    font-weight: 400;
    line-height: 90%;
    letter-spacing: -2.3px;
    text-transform: uppercase;
    margin: 0;
}
.boxStyle h4 {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 40px;
    font-style: normal;
    font-weight: 400;
    line-height: 50px;
    margin: 0;
}
.boxStyle p {
    color: #161616;
    font-family: "PP Telegraf";
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: 140%;
    margin: 0;
    padding: 15px 0 0;
}
.purpleBox {
    background: #ca9dcd;
    padding: 0;
}
img.tax-img {
    width: 100%;
    max-width: 320px;
    display: block !important;
}
img.cyberscope-logo {
    width: 100%;
    max-width: 230px;
}
section.from-meme-sec {
    /* background: linear-gradient(180deg, #7F8CFF 0%, #3240B1 47.13%, #0C1988 104.63%); */
    padding: 90px 0 150px;
    background: url(../images/blue-bg-img.svg) no-repeat;
    background-size: cover;
    overflow: hidden;
}
.print-img-center img {
    width: 100%;
    max-width: 400px;
}

.print-img-center {
    text-align: center;
    padding: 50px 0;
}
.yanw-row-zigzag {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
}
/* ... */

